# tami_one

./: .gitignore  README.md  example.env  original_compiled_agent.json  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agents/: compiled_agent.py  core.py  memory.py  schema.py  schemas.py  signatures.py
app/commitments/: commitments_agent.py  eval.py  extractor.py  models.py  processor.py
app/conversations/: state.py  summarizer.py  threader.py
app/db/: __init__.py  cache.py  engine.py  models.py  seed.py  upsert.py
app/items/: extractor.py  item_agent.py
app/reminders/: scheduler.py
app/routers/: business_webhook.py  digest.py  green_api.py  personal_webhook.py
app/services/: green_api_client.py  modal_client.py  modal_transcriber.py  transcription.py  transcription_factory.py  whatsapp.py
app/tasks/: processor.py  session.py  task_agent.py
docs/: eval_analyzer.md
eval/: dataset.py  llm_judge.py  localize.py  metrics.py
modal_transcription/: README.md  app.py
modal_transcription/scripts/: smoke_test.py
modal_transcription/tests/: test_helpers.py
scripts/: compare_runs.py  diagnose.py  drain_prod.py  eval_analyzer.py  eval_inspector.py  eval_runner.py  frozen_compare.py  regrade_predictions.py  seed.py  smoke_eval.py
tests/: conftest.py  test_commitments.py  test_conversations.py  test_e2e.py  test_eval.py  test_eval_analyzer.py  test_items.py  test_llm_judge.py  test_localize.py  test_modal_transcription.py  test_payload.json  test_regrade.py  test_task_review.py  test_upsert.py  test_webhook.py
tests/evals/: devset.json  (+6 more)
(+16 files in other folders)
