[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tami-one"
version = "0.1.0"
description = "360dialog WhatsApp bot with OpenAI agent"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "openai==1.93.0",
    "pydantic==2.11.7",
    "langsmith==0.3.45",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9",
    "dspy-ai>=2.5.0",
    "rich>=13.7.1",
    "backoff>=2.2.0",
    "pyyaml>=6.0",
]

[project.scripts]
serve = "app.main:serve"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "eval*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that make real LLM API calls (deselect with '-m \"not integration\"')",
]
